pyramid_chameleon_genshi
========================

0.4 (2011-01-18)
----------------

- Depend on Pyramid 1.0a10+ (ZCML).

0.3 (2011-01-08)
----------------

- Use os.path.normpath instead of os.path.realpath to get a canonical filename
  for XInclude fragments. This prevents many lstat(2) calls for every template
  use.

0.2 (2010-11-16)
----------------

- Bring up to date with Pyramid 1.0a3+ ``template_renderer_factory`` changes.


0.1 (2010-11-05)
----------------

- Forked from repoze.bfg.chameleon_genshi 0.3.
